# libwheels

./: README.md
linear_algebra/: Mat2.hpp  Rot2.hpp  Vec2.hpp  linear_algebra.hpp
test/: CMakeLists.txt  debug_multidiff_transform.cpp  mat2_test.cpp  multidiff_transform.cpp  polynominal_frame.hpp  static_transform_test.cpp  time_development.cpp  util.hpp  vec2_test.cpp
transform2d/: diff_transform.hpp  dynamic_transform.hpp  multidiff_transform.hpp  static_transform.hpp  transform.hpp
util/: print.hpp
